Добавлен функционал подтверждения пользователя по email и отправка соответствуюего задания в rabbitmq
